--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-server.port=8088
-spring.jpa.hibernate.ddl-auto=create
+server.port=8082
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/greeting_app
 spring.datasource.username=root
 spring.datasource.password=SreeSree@285
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
